--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ section{
 
 .top_main img{
     width: 30%;
-    border: 3px solid hsl(236, 100%, 87%);
+    border: 3px solid white;
     border-radius: 100%;
 }
 
@@ -404,4 +404,57 @@ section{
 .last_week_self-care{
     color: hsl(236, 100%, 87%);
     font-size: 15px;
+}
+
+@media (max-width: 600px) {
+    section{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 90%;
+    }
+
+    .main{
+        grid-area: 1/1/3/2;
+        background-color: hsl(235, 46%, 20%);
+        border-radius: 7px;
+        margin: 5%;
+    }
+
+    .options{
+        flex-direction: row;
+        justify-content: start;
+        gap: 10%;
+    }
+
+    .top_main{
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        height: 40%;
+        padding: 5%;
+    }
+
+    .top_main img{
+        grid-area: 1/1/3/2;
+        width: 80%;
+    }
+
+    .report{
+        grid-area: 1/2/2/3;
+        font-size: 10px;
+        margin-top: 5%;
+    }
+
+    .name{
+        grid-area: 2/2/3/3;
+        border-color: black;
+        font-size: 200%;
+        color: white;
+        font-weight: 300;
+    }
+
+    .top-work{
+        display: flex;
+        flex-direction: row;
+    }
 }
